tdf#118045 PPTX export: fix proportional line spacing

If line spacing differs from the default 100%, export it
as direct paragraph formatting (similar to the
other paragraph style properties).

Change-Id: Id5db9ae36018c8a20b832470685bdfbba19d80f3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125438
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>